--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.0.1",
   "description": "one of my first socket.io apps :D",
   "private": true,
-  "build": "babel --presets es2015 -d lib/ src",
+  "scripts": {
+    "build": "babel -d lib/ src"
+  },
   "dependencies": {
     "express": "^4.17.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1"
   }
 }
