--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "babel -d lib/ src"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
