--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "one of my first socket.io apps :D",
   "private": true,
   "scripts": {
-    "build": "babel -d lib/ src"
+    "build": "babel -d lib/ src",
+    "watch": "watch 'npm run build' ./src"
   },
   "dependencies": {
     "express": "^4.17.1",
@@ -12,6 +13,7 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0"
+    "babel-preset-env": "^1.7.0",
+    "watch": "^1.0.2"
   }
 }
